ajust random bug
