# src/main/webapp/doc/swagger.json
@@ -16,6 +16,8 @@
   }, {
     "name" : "mingyancategory"
   }, {
+    "name" : "index"
+  }, {
     "name" : "music"
   }, {
     "name" : "album"
@@ -139,6 +141,57 @@
           "required" : true,
           "type" : "string"
         } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebResponse"
+            }
+          }
+        }
+      }
+    },
+    "/index/musicList" : {
+      "get" : {
+        "tags" : [ "index" ],
+        "summary" : "获取全部的专辑信息,包含音乐详细",
+        "description" : "",
+        "operationId" : "musicList",
+        "produces" : [ "application/json" ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebResponse"
+            }
+          }
+        }
+      }
+    },
+    "/index/randMingYan" : {
+      "get" : {
+        "tags" : [ "index" ],
+        "summary" : "随机获取一句名言",
+        "description" : "",
+        "operationId" : "randMingYan",
+        "produces" : [ "application/json" ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebResponse"
+            }
+          }
+        }
+      }
+    },
+    "/index/randMusic" : {
+      "get" : {
+        "tags" : [ "index" ],
+        "summary" : "随机获取一首歌",
+        "description" : "",
+        "operationId" : "randMusic",
+        "produces" : [ "application/json" ],
         "responses" : {
           "200" : {
             "description" : "successful operation",
